fp-macros/tests/ui/missing_equals.stderr
error: expected `=`
  --> tests/ui/missing_equals.rs:12:14
   |
12 |         type Of<A> Option<A>;
   |                    ^^^^^^
